<resources>
    <string name="app_name">خبر</string>
    <string name="home">خانه</string>
    <string name="search">جستجو…</string>
    <string name="setting">تنظیمات</string>
    <string-array name="home_tabs">
        <item>صفحه اصلی</item>
        <item>مورد علاقه</item>
    </string-array>
    <string name="popular_news">اخبار پربازدید</string>
    <string name="view_all">مشاهده همه</string>
    <string name="important_news">اخبار مهم</string>
    <string name="trending_news">اخبار داغ 🔥</string>
    <string name="share">اشتراک گذاری</string>
    <string name="welcome">خوش اومدی!</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="login">وارد شدن</string>
    <string name="signUp">ثبت نام نکردی؟<font fgcolor='#5474FF'>ثبت نام</font></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="login_with_google">با گوگل وارد شوید</string>
    <string name="Connection">مشکلی در اتصال وجود دارد.</string>
    <string name="edit_profile">ویرایش پروفایل</string>
    <string name="account">اکانت</string>
    <string name="notification">اعلان ها</string>
    <string name="customize">شخصی‌سازی</string>
    <string name="others_settings">سایر تنظیمات</string>
    <string name="automatic">تنظیم خودکار</string>
    <string name="dark_mode">حالت تاریک</string>
    <string name="delete_cache">حذف کش</string>
    <string name="about_app">درباره برنامه</string>
    <string name="app_rules">قوانین برنامه</string>
    <string name="help_developers">کمک و ارتباط با سازندگان</string>
    <string name="app_release">نسخه برنامه</string>
    <string name="logout">خروج از اکانت</string>
    <string name="splash_error">مشکلی در اتصال وجود دارد.</string>
    <string name="try_again">تلاش دوباره</string>
    <string name="repeat_password">تکرار رمزعبور</string>
    <string name="delete_account">حذف اکانت</string>
    <string name="choose_category">دسته‌بندی‌های مورد‌علاقه خود را انتخاب کنید.</string>
</resources>